--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&family=Poppins:ital,wght@0,400;1,200&family=Zen+Maru+Gothic:wght@300&display=swap");
 
 html {
   box-sizing: border-box;
@@ -6,4 +7,115 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
+  color: #000;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+/* QUOTE CONTAINER */
+.quote-container {
+  width: auto;
+  max-width: 900px;
+  padding: 20px 30px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* QUOTE TEXT */
+.quote-text {
+  font-size: 2.8rem;
+}
+.long-quote {
+  font-size: 2rem;
+}
+
+/* QUOTE ICON */
+.fa-quote-left {
+  font-size: 4rem;
+}
+
+/* AUTHOR QUOTE */
+.quote-author {
+  margin-top: 15px;
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: italic;
+}
+
+/* BUTTONS */
+.button-container{
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+
+
+}
+button{
+  cursor: pointer;
+  font-size: 1.2rem;
+  height: 2.2rem;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #333;
+  outline: none;
+  box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
+}
+
+button:hover{
+  filter: brightness(110%);
+}
+button:active{
+  transform: translate(0,0.3rem);
+  box-shadow: rgba(255,255,255,0.56);
+}
+/* TWITTER BUTTON */
+.twitter-button:hover{
+  color: #38a1f3;
+}
+
+.fa-twitter{
+  font-size: 1.5rem;
+}
+
+
+/* LOADER SPIN */
+.loader {
+  align-items: center;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid blue;
+  border-bottom: 16px solid blue;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* MEDIA QUERY TABLET OR SMALL  */
+@media screen and (max-width: 1000px) {
+  .quote-container {
+    margin: auto 20px;
+  }
+
+  .quote-text {
+    font-size: 2.5rem;
+  }
+}
+
+
+
